--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,5 @@
 
 body{
   font-family: 'montserrat';
-  padding: 0 20px;
+  padding: 0 10px;
 }
